fix: colab start

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /data/landscape_photography_neg_b&w_text_v1-5_mse_vae_dpm2SaKarras50_cfg7_n2500/
 /data/person_v1-5_mse_vae_ddim50_cfg7_n2115/
+/data/selfies_dataset/
